# duckylights

./: README.md  pyproject.toml
doc/slides/: index.html
doc/slides/reveal.js-3.8.0/: index.html
duckylights/: __init__.py  keyboard.py
examples/: kmail.py
